Deployments/Source/userdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: userdb
  name: userdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: userdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/pse-chatnetwork: "true"
        io.kompose.service: userdb
    spec:
      containers:
        - image: mongo:latest
          name: chatdb
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: userdb
      restartPolicy: Always
      volumes:
        - name: userdb
          persistentVolumeClaim:
            claimName: userdb
status: {}
