Deployments/Source/chat-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: chat-server
  name: chat-server
spec:
  replicas: 2 
  selector:
    matchLabels:
      io.kompose.service: chat-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/pse-chatnetwork: "true"
        io.kompose.service: chat-server
    spec:
      containers:
        - image: chatimage:1.0
          imagePullPolicy: Never
          name: chat-server
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: chat-server
  name: chat-server
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: chat-server
  type: NodePort
status:
  loadBalancer: {}
