Deployments/Source/pse-chatnetwork-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pse-chatnetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pse-chatnetwork: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pse-chatnetwork: "true"
